Publish mockup Add favicon Make text brown in benefits section Small fixes

--- a/css/style.sass
+++ b/css/style.sass
@@ -119,3 +119,12 @@ a.anchor
 
 .background-leaf
     position: absolute
+
+.brown-text-heading
+    color: #664c2a
+
+.brown-text
+    color: #261c10
+
+.brown-background
+    background-color: #f2efeb
